--- a/references.bib
+++ b/references.bib
@@ -89,7 +89,33 @@
 }
 
 @misc{maunadata,
-author = {Pieter Tans and Ralph Keeling},
-title = {Trends in Atmospheric Carbon Dioxide},
-howpublished= {\url{https://gml.noaa.gov/ccgg/trends/data.html}}}
+  author = {Pieter Tans and Ralph Keeling},
+  title = {Trends in Atmospheric Carbon Dioxide},
+  urldate = {2020-07-04},
+  year = {2020},
+  url = {https://gml.noaa.gov/ccgg/trends/data.html}}
 
+
+@misc{faithfuldata,
+  author = {Wolfgang Hardle},
+  title = {Smoothing Techniques with Implementation in {S}},
+  publisher={Springer},
+  address = {New York},
+  year={1991}}
+  
+  
+@misc{islandsdata,
+  author = {Donald R. McNeil},
+  title = {Interactive Data Analysis},
+  publisher={Wiley},
+  year={1977}}
+
+@misc{lightdata,
+  author = {Albert A. Michelson},
+  title = {Experimental determination of the velocity of light made at the United States Naval Academy, Annapolis},
+  journal={Astronomic Papers},
+  address = {U.S. Nautical Almanac Office},
+  year={1882}, 
+  volume={1},
+  pages={135–8},
+  note = {(see Table 24)}}
