fixing narrative for canlang scatterplot

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -351,7 +351,7 @@ english_mother_tongue <- can_lang %>%
 census_popn <- 35151728
 ```
 
-We saw that `r format(english_mother_tongue, scientific = FALSE, big.mark = ",")` people reported that their mother tongue was English in the 2016 Canadian census, but what does this number really mean? To really understand this number, we need context. In particular, how many people were in Canada when this data was collected? From the 2016 Canadian census profile, we can see that the population was reported to be `r format(census_popn, scientific = FALSE, big.mark = ",")` people. The number of people who report that English is their mother tongue is much more meaningful when we report it in this context. We can even go a step further and transform this count to a percent value to represent this as a single meaningful number in our data visualizations. We can do this by dividing the number of people reporting a given language as their mother tongue by the number of people who live in Canada and multiplying by 100. For example, the percentage of people who reported that their mother tongue was English in the 
+Similar to our example in chapter 1, we can convert the counts to percentages to make them more understandable. We can do this by dividing the number of people reporting a given language as their mother tongue or primary language at home by the number of people who live in Canada and multiplying by 100\%. For example, the percentage of people who reported that their mother tongue was English in the 
 2016 Canadian census was `r  format(english_mother_tongue, scientific = FALSE, big.mark = ",") ` / `r  format(census_popn, scientific = FALSE, big.mark = ",")` $\times$ `r 100` \% =
 `r format(round(english_mother_tongue/census_popn*100, 2), scientific = FALSE, big.mark = ",")`\%.
 
@@ -383,6 +383,7 @@ Changing the units to include this context increases our understanding and allow
 Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between the number of people who have a language as their mother tongue and the number of people who speak that language at home, is there a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)? One common way to explore this is to colour the data points on the scatter plot we have already created by group/category. For example, given that we have the higher-level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
 scatter plot to represent each language's higher-level language category.
 
+Here we want to distinguish the values by their group according to the `category` column. 
 We will add an argument to the `aes` function, specifying that the `category` column should colour the points:
 
 ```{r scatter-colour-by-category, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
