adding package reference for rcolourbrewer, adding colour palettes info

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -383,8 +383,8 @@ Changing the units to include this context increases our understanding and allow
 Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between the number of people who have a language as their mother tongue and the number of people who speak that language at home, is there a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)? One common way to explore this is to colour the data points on the scatter plot we have already created by group/category. For example, given that we have the higher-level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
 scatter plot to represent each language's higher-level language category.
 
-Here we want to distinguish the values by their group according to the `category` column. 
-We will add an argument to the `aes` function, specifying that the `category` column should colour the points:
+Here we want to distinguish the values according to their `category` group. 
+We can add an argument to the `aes` function, specifying that the `category` column should colour the points. This will colour the points according to their group and add a legend at the side of the plot. 
 
 ```{r scatter-colour-by-category, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
 ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color = category)) +
@@ -394,6 +394,23 @@ ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color 
   scale_x_log10(labels = scales::comma) +
   scale_y_log10(labels = scales::comma)
 ```
+
+
+The points are coloured according to the default `ggplot2` color palette. What if you want different colors? We can do this! In R, one of the packages that provides alternative color palettes is the `RColorBrewer` library [@RColorBrewer]. You can also print out a list of color blind friendly palettes 
+
+```{r}
+library(RColorBrewer)
+display.brewer.all()
+```
+
+
+```{r}
+display.brewer.all(colorblindFriendly = T)
+```
+
+
+You can also use this color blindness simulator to check if your visualizations are color blind friendly
+You can look more in depth into the documentation of the scale_fill_* functions here: https://ggplot2.tidyverse.org/reference/scale_brewer.html
 
 From the visualization in Figure \@ref(fig:scatter-colour-by-category), we can now clearly see that not just a lot, but that the majority of Canadians reported one of the official languages as their mother tongue and as the language they speak most often at home. 
 
