--- a/references.bib
+++ b/references.bib
@@ -119,3 +119,10 @@
   volume={1},
   pages={135–8},
   note = {(see Table 24)}}
+
+@Manual{RColorBrewer,
+    title = {RColorBrewer: ColorBrewer Palettes},
+    author = {Erich Neuwirth},
+    year = {2014},
+    note = {R package version 1.1-2},
+  }
