--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -336,10 +336,11 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   scale_y_log10(labels = scales::comma)
 ```
 > Here we are adjusting the scale of the x and y axes on a $log$ scale with base 10. 
-> Notice that $log_{10}(10) = 1$, $log_{10}(100) = 2$, and $log_{10}(1000) = 3$. The values 
-10, 100 and 1000 are all the same distance apart on the log scale so we 
-can see that it is moving big values closer together and moving small values farther apart.
-> Therefore by adjusting the scale in this way we are highlighting the differences between small values, which allows us to better see the relationship in Figure \@ref(fig:mother-tongue-vs-most-at-home-scale). 
+> Notice that $log_{10}(10) = 1$, $log_{10}(100) = 2$, and $log_{10}(1000) = 3$. 
+On the logarithmic scale, the values 
+10, 100 and 1000 are all the same distance apart so we see that applying this function
+is moving big values closer together and moving small values farther apart.
+> Therefore by adjusting the scale in this way we are highlighting the differences between small values, which allows us to better see the relationship in Figure \@ref(fig:mother-tongue-vs-most-at-home-scale).
 > Log transformations are not the only way you can transform the data! Notice if you write `log(0)` in R you get `-Inf` so if you have lots of zeros in your data you will want to do something else, which is beyond the scope of the book. 
 
 From the visualization in Figure \@ref(fig:mother-tongue-vs-most-at-home-scale), we see that for the 214 languages in this data set, as the number of people who have a language as their mother tongue increases, so does the number of people who speak that language at home. When we see two variables do this, we call this a *positive relationship*. Because the points are fairly close together, we can say that the relationship is strong. Because drawing a straight line through these  points would fit the pattern we observe quite well, we say that it's linear.
@@ -351,7 +352,7 @@ english_mother_tongue <- can_lang %>%
 census_popn <- 35151728
 ```
 
-Similar to our example in chapter 1, we can convert the counts to percentages to make them more understandable. We can do this by dividing the number of people reporting a given language as their mother tongue or primary language at home by the number of people who live in Canada and multiplying by 100\%. For example, the percentage of people who reported that their mother tongue was English in the 
+Similar to our example in chapter 1, we can convert the counts to percentages to make them more understandable. Changing the units allows us to better interpret the numbers in our data set. We can do this by dividing the number of people reporting a given language as their mother tongue or primary language at home by the number of people who live in Canada and multiplying by 100\%. For example, the percentage of people who reported that their mother tongue was English in the 
 2016 Canadian census was `r  format(english_mother_tongue, scientific = FALSE, big.mark = ",") ` / `r  format(census_popn, scientific = FALSE, big.mark = ",")` $\times$ `r 100` \% =
 `r format(round(english_mother_tongue/census_popn*100, 2), scientific = FALSE, big.mark = ",")`\%.
 
@@ -378,52 +379,51 @@ ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent)) +
   scale_y_log10(labels = scales::comma)
 ```
 
-Changing the units to include this context increases our understanding and allows us to better interpret the numbers in our data set.
-
 Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between the number of people who have a language as their mother tongue and the number of people who speak that language at home, is there a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)? One common way to explore this is to colour the data points on the scatter plot we have already created by group/category. For example, given that we have the higher-level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
 scatter plot to represent each language's higher-level language category.
 
-Here we want to distinguish the values according to their `category` group. 
-We can add an argument to the `aes` function, specifying that the `category` column should colour the points. This will colour the points according to their group and add a legend at the side of the plot. 
+Here we want to distinguish the values according to the `category` group with which they belong.  
+We can add an argument to the `aes` function, specifying that the `category` column should colour the points. Adding this argument will colour the points according to their group and add a legend at the side of the plot. 
 
 ```{r scatter-colour-by-category, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
 ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color = category)) +
   geom_point() +
-  xlab("Language spoken most at home (percentage of Canadian residents)") +
-  ylab("Mother tongue (percentage of Canadian residents)") +
+  xlab("Language spoken most at home \n (percentage of Canadian residents)") +
+  ylab("Mother tongue \n (percentage of Canadian residents)") +
   scale_x_log10(labels = scales::comma) +
   scale_y_log10(labels = scales::comma)
 ```
 
-
-The points are coloured according to the default `ggplot2` color palette. What if you want different colors? We can do this! In R, one of the packages that provides alternative color palettes is the `RColorBrewer` library [@RColorBrewer]. You can also print out a list of color blind friendly palettes 
+In Figure \@ref(fig:scatter-colour-by-category), the points are coloured with the default `ggplot2` colour palette. But what if you want to use different colours? In R, one package that provides alternative colour palettes is `RColorBrewer` [@RColorBrewer]. You can visualize the list of colour palettes that `RColorBrewer` has to offer with the `display.brewer.all()` function. You can also print a list of colour blind friendly palettes by adding `colorblindFriendly = T` to the function.
 
 ```{r}
 library(RColorBrewer)
-display.brewer.all()
-```
-
-
-```{r}
 display.brewer.all(colorblindFriendly = T)
 ```
 
+From the output above, we can choose the colour palette we want to use in our plot. 
+To change the colour palette, we add the `scale_colour_brewer()` layer indicating the palette we want to use. 
+```{r scatter-colour-by-category-palette, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category with colour blind friendly colours"}
+ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color = category)) +
+  geom_point() +
+  xlab("Language spoken most at home \n (percentage of Canadian residents)") +
+  ylab("Mother tongue \n (percentage of Canadian residents)") +
+  scale_x_log10(labels = scales::comma) +
+  scale_y_log10(labels = scales::comma) + 
+  scale_color_brewer(palette = "RdYlBu")
+```
 
-You can also use this color blindness simulator to check if your visualizations are color blind friendly
-You can look more in depth into the documentation of the scale_fill_* functions here: https://ggplot2.tidyverse.org/reference/scale_brewer.html
+You can use this [color blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/) to check if your visualizations are colour blind friendly.
 
-From the visualization in Figure \@ref(fig:scatter-colour-by-category), we can now clearly see that not just a lot, but that the majority of Canadians reported one of the official languages as their mother tongue and as the language they speak most often at home. 
+From the visualization in Figure \@ref(fig:scatter-colour-by-category-palette), we can now clearly see that not just a lot, but that the majority of Canadians reported one of the official languages as their mother tongue and as the language they speak most often at home. 
 
 What do we see when considering the second part of our exploratory question? Do we see a difference in the pattern of the relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home between higher-level language categories? Probably not!
 
 For each higher-level language category, there appears to be a positive relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home. This relationship looks similar, regardless of the category. 
 
-Does this mean that this relationship is positive for all languages in the world? Can we use this data visualization on its own to predict how many people have a given language as their mother tongue if we know how many people speak it as their primary language at home?
+Does this mean that this relationship is positive for all languages in the world? Can we use this data visualization on its own to predict how many people have a given language as their mother tongue if we know how many people speak it as their primary language at home? The answer to both these questions is "no." However, with exploratory data analysis, we can create new hypotheses, ideas, and questions (like the ones at the beginning of this paragraph). Answering those questions would likely involve gathering additional data and doing more complex analyses, which we will see more of later in this course.  
 
-The answer to both these questions is "no." However, with this exploratory data analysis, we can create new hypotheses, ideas,
-and questions (like the ones at the beginning of this paragraph). Answering those questions would likely involve gathering additional data and doing more complex analyses, which we will see more of later in this course.  
-
-We can go one step further and distinguish English and French languages with different colours in our visualization. To separate these languages, we will filter for the rows where the language is either English or French and mutate the `category` column to equal the corresponding language. 
+Now, we can go one step further and distinguish English and French languages with different colours in our visualization. To separate these languages, we will filter the rows where the language is either English or French and mutate the `category` column to equal the corresponding language. 
 
 ```{r 03-separate-English-French}
 english_and_french <- can_lang %>%
@@ -453,11 +453,11 @@ ggplot(can_lang, aes(
   shape = category
 )) + # map categories to different shapes
   geom_point(alpha = 0.6) + # set the transparency of the points
-  scale_color_manual(values = c("deepskyblue2", "firebrick1", "black", "forestgreen")) + # choose point colours
   xlab("Language spoken most at home \n (percentage of Canadian residents)") +
   ylab("Mother tongue \n (percentage of Canadian residents)") +
   scale_x_log10(labels = scales::comma) +
-  scale_y_log10(labels = scales::comma)
+  scale_y_log10(labels = scales::comma) + 
+  scale_color_brewer(palette = "RdYlBu")
 ```
 
 ### The Michelson speed of light data set
