--- a/index.Rmd
+++ b/index.Rmd
@@ -66,7 +66,7 @@ and exercises in this book. Figure \@ref(fig:img-chapter-overview) summarizes a 
 knitr::include_graphics("img/chapter_overview.jpeg")
 ```
 
-The four common data science methods that are useful for answering predictive and inferential data analysis questions covered in this book are:
+The four common data science methods that are useful for answering predictive, exploratory and inferential data analysis questions covered in this book are:
 
 1. **Classification: predicting a class/category for a new observation.** This could answer a question such as whether a tumour is cancerous or benign given some tumour cell measurements?
 
