--- a/index.Rmd
+++ b/index.Rmd
@@ -44,8 +44,8 @@ can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst
 ## Overview
 
 This textbook aims to be an approachable introduction to the world of data science. 
-In this book, we define *data science* as the study and development of reproducible, 
-auditable processes to obtain value (i.e., insight) from data. 
+In this book, we define *data science* as the process of generating
+insight from data through reproducible and auditable processes. 
 At a high level, in this book, readers will learn how to 
 
 (1) use reproducible tools to do data analysis and 
