--- a/index.Rmd
+++ b/index.Rmd
@@ -218,7 +218,7 @@ From a style perspective, the assignment symbol is preferred
 and is what we will use in this course. 
 When we name something in R using the assignment symbol, `<-`, 
 we do not need to surround the name we are giving (on `<-`'s left-hand side) 
-with quotes like the file name 
+with quotes, like the file name, 
 because we are formally telling R about this new word and giving it a value. 
 Only characters and words that act as values (on `<-`'s right-hand side) 
 need to be surrounded by quotes.
