editing writing based on Tiffany's feedback

--- a/index.Rmd
+++ b/index.Rmd
@@ -118,7 +118,8 @@ to Canada and not spoken anywhere else in the world [@statcan2018mothertongue].
 Sadly, colonization has led to the loss of many Aboriginal languages. For instance,
 generations of children were not allowed to speak their mother tongue
 (the first language an individual learns in childhood) in Canadian residential 
-schools. Colonizers also renamed places they had "discovered" [@wilson2018]. Acts such as these have significantly harmed the continuity of Aboriginal languages in Canada, and some languages are considered "endangered" as few people report speaking them. 
+schools. Colonizers also renamed places they had "discovered" [@wilson2018]. 
+Acts such as these have significantly harmed the continuity of Aboriginal languages in Canada, and some languages are considered "endangered" as few people report speaking them. 
 
 > To learn more about Indigenous languages in Canada, check out [Canadian Geographic's article on Mapping Indigenous languages in Canada](https://www.canadiangeographic.ca/article/mapping-indigenous-languages-canada) [@walker2017].
 
@@ -223,13 +224,14 @@ because we are formally telling R about this new word and giving it a value.
 Only characters and words that act as values (on `<-`'s right-hand side) 
 need to be surrounded by quotes.
 
-
-There are certain conventions for naming objects in R. 
-Object names should consist of letters, numbers and underscores `_` to separate
-the words in a name.
+Object names can consist of letters, numbers, periods `.` and underscores `_`. 
+Though there are certain conventions for naming objects in R. When naming an object we
+suggest using only lower case letters, numbers and underscores `_` to separate the words in a name. 
+R is case sensitive, which means that `Letter` and `letter` would be two different 
+objects in R. 
 You should also try to give your objects meaningful names.
-For instance, you *can* name a plot `x`. 
-However, using more meaningful terms, such as `language_plot`, will help you remember what each name in your code represents. 
+For instance, you *can* name a data frame `x`. 
+However, using more meaningful terms, such as `language_data`, will help you remember what each name in your code represents. 
 We recommend following the Tidyverse naming conventions outlined in the [Tidyverse Style Guide](https://principles.tidyverse.org/names-attribute.html#universal-names) [@tidyversestyleguide]. 
 
 Let's now use the assignment symbol to give the name `can_lang` 
@@ -325,18 +327,19 @@ Creating effective data visualizations is an essential piece to any data analysi
 
 ### Using `ggplot` to create a bar plot
 
-In our data set, we can see that each variable--- higher-level language category (`category`), language (`language`), mother tongue (`mother_tongue`), language spoken most at home (`most_at_home`), etc. ---are all in separate columns. In addition, there is a single row (or observation) for each language. The data are, therefore, in what we call a *tidy data* format. Tidy data is a fundamental concept and will be a significant focus in the remainder of this course: many of the functions from `tidyverse` require tidy data, including the `ggplot` function that we will use shortly for our visualization. We will formally introduce this concept in chapter 3.
+In our data set, we can see that our variables--- language (`language`) and mother tongue (`mother_tongue`) ---are in separate columns. In addition, there is a single row (or observation) for each language. The data are, therefore, in what we call a *tidy data* format. Tidy data is a fundamental concept and will be a significant focus in the remainder of this course: many of the functions from `tidyverse` require tidy data, including the `ggplot` function that we will use shortly for our visualization. We will formally introduce this concept in chapter 3.
 
 
-We will make a bar plot using the `most_at_home` and `language` columns from our `ten_lang` data frame. To create a bar plot of these two variables using the `ggplot` function, we would the following: 
+We will make a bar plot to visualize our data. A bar plot is a chart where the heights of the bars represent certain values, like counts or proportions. We will make a bar plot using the `most_at_home` and `language` columns from our `ten_lang` data frame.
+To create a bar plot of these two variables using the `ggplot` function, we would the following: 
 
 ```{r img-ggplot, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Creating a bar plot with the ggplot function", out.width="1100", fig.retina = 2}
 knitr::include_graphics("img/ggplot_function.jpeg")
 ```
 
-Below we create a bar plot using the `ggplot` function following the instructions described in figure \@ref(fig:img-ggplot):
+In Figure \@ref(fig:barplot-mother-tongue), we create a bar plot using the `ggplot` function following the instructions described in figure \@ref(fig:img-ggplot):
 
-```{r barplot-mother-tongue, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue"}
+```{r barplot-mother-tongue, fig.width=5.75, fig.height=4, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue"}
 ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
   geom_bar(stat = "identity")
 ```
@@ -354,7 +357,7 @@ It is exciting that we can already visualize our data to help answer our questio
 
 Adding additional layers to our visualizations that we create in `ggplot` is one common and easy way to improve and refine our data visualizations. New layers are added to `ggplot` objects using the `+` symbol. For example, we can use the `xlab` and `ylab` functions to add layers where we specify meaningful and informative labels for the x and y axes. Again, since we are specifying words (e.g. `"Mother tongue (Number of Canadians residents)"`) as arguments to `xlab` and `ylab`, we surround them with double-quotes. We can add many more layers to format the plot further, and we will explore these in later chapters.
 
-```{r barplot-mother-tongue-labs, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with x and y labels"}
+```{r barplot-mother-tongue-labs, fig.width=5.75, fig.height=4, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with x and y labels"}
 ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
   geom_bar(stat = "identity") +
   xlab("Language") +
@@ -363,7 +366,7 @@ ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
 
 In figure \@ref(fig:barplot-mother-tongue-labs), the x labels overlap, making it challenging to read the different languages. One solution is to rotate the plot, so the bars are horizontal, and thus the labels will be more readable. We can again add additional layers to the plot object using the `+` symbol to add the `coord_flip` function, which swaps the x and y coordinate axes:
 
-```{r barplot-mother-tongue-flipped, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Horizontal bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue"}
+```{r barplot-mother-tongue-flipped, fig.width=5.75, fig.height=4, warning=FALSE, fig.cap = "Horizontal bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue"}
 ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
   geom_bar(stat = "identity") +
   xlab("Language") +
@@ -374,7 +377,7 @@ ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
 
 From figure \@ref(fig:barplot-mother-tongue-flipped), we have answered our initial question. However, our visualization could be made more transparent by organizing the bars according to the number of Canadian residents reporting each language rather than in alphabetical order. We can reorder the bars using the `reorder` function, which orders a variable (here `language`) based on the values of the second variable (`mother_tongue`):
 
-```{r barplot-mother-tongue-reorder, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with bars reordered"}
+```{r barplot-mother-tongue-reorder, fig.width=5.75, fig.height=4, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with bars reordered"}
 ggplot(ten_lang, aes(x = reorder(language, mother_tongue), y = mother_tongue)) +
   geom_bar(stat = "identity") +
   xlab("Language") +
@@ -400,11 +403,7 @@ library(tidyverse)
 can_lang <- read_csv("data/can_lang.csv")
 
 aboriginal_lang <- filter(can_lang, category == "Aboriginal languages")
-
 arranged_lang <- arrange(aboriginal_lang, by = desc(mother_tongue))
-
-# we skipped the select step here! 
-
 ten_lang <- slice(arranged_lang, 1:10)
 
 ggplot(ten_lang, aes(
