--- a/index.Rmd
+++ b/index.Rmd
@@ -94,7 +94,7 @@ Source: [What is the question?](https://science.sciencemag.org/content/347/6228/
 
 ## Chapter Learning Objectives
 
-By the end of the chapter, students will be able to:
+By the end of the chapter, readers will be able to:
 
 - load the `tidyverse` package into R
 - create new variables and objects in R using the assignment symbol
@@ -181,12 +181,13 @@ function. However, given that `read_csv` is not included in the base
 installation of R, we will have to load it from somewhere else before we can use
 it. The place we will load it from is an R package. An R package is a collection
 of functions that once loaded, can be used in addition to the built-in R package
-functions. The `read_csv` function, in particular, can be made accessible 
-through loading the `tidyverse` package [@wickham2019tidverse] (more on this later), using the 
-`library` function.
+functions. The `read_csv` function, in particular, can be made accessible through the
+`library` function by loading the `tidyverse` package [@wickham2019tidverse]. 
+`tidyverse` contains many functions, which allow us to read, clean, wrangle and visualize
+data. 
 
 After loading the `tidyverse` package, we can call the `read_csv` function and 
-pass it a single argument: the name of the file, `"can_lang.csv"`. We have to put quotes around file names and other letters and words that we use in our code to distinguish it from the special words that make up the R programming language.  The file's name is the only argument we need to provide because our file satisfies everything else the `read_csv` function expects in the default use-case (which we just discussed). Later in the course, we'll learn more about dealing with more complicated files where the default arguments are not appropriate, for example, files that use spaces or tabs to separate the columns instead of commas.
+pass it a single argument: the name of the file, `"can_lang.csv"`. We have to put quotes around file names and other letters and words that we use in our code to distinguish it from the special words that make up the R programming language.  The file's name is the only argument we need to provide because our file satisfies everything else the `read_csv` function expects in the default use-case (which we just discussed). Later in the book, we'll learn more about dealing with more complicated files where the default arguments are not appropriate, for example, files that use spaces or tabs to separate the columns instead of commas.
 
 ```{r load_can_lang_data, warning=FALSE, message=FALSE}
 library(tidyverse)
@@ -196,7 +197,7 @@ read_csv("data/can_lang.csv")
 
 > **In case you want to know more (optional):** 
 > We use the `read_csv` function from the `tidyverse` instead of the base R function `read.csv` because it's faster, and it creates a nicer variant of the base R data frame called a *tibble*. 
-> This has several benefits that we'll discuss in further detail later in the course.
+> This has several benefits that we'll discuss in further detail later in the book.
 
 ## Naming things in R
 
@@ -216,7 +217,7 @@ first_name <- "Naming using the assignment symbol"
 second_name = "Naming using the equals symbol"
 ```
 From a style perspective, the assignment symbol is preferred 
-and is what we will use in this course. 
+and is what we will use in this book. 
 When we name something in R using the assignment symbol, `<-`, 
 we do not need to surround the name we are giving (on `<-`'s left-hand side) 
 with quotes, like the file name, 
@@ -327,7 +328,7 @@ Creating effective data visualizations is an essential piece to any data analysi
 
 ### Using `ggplot` to create a bar plot
 
-In our data set, we can see that our variables--- language (`language`) and mother tongue (`mother_tongue`) ---are in separate columns. In addition, there is a single row (or observation) for each language. The data are, therefore, in what we call a *tidy data* format. Tidy data is a fundamental concept and will be a significant focus in the remainder of this course: many of the functions from `tidyverse` require tidy data, including the `ggplot` function that we will use shortly for our visualization. We will formally introduce this concept in chapter 3.
+In our data set, we can see that our variables--- language (`language`) and mother tongue (`mother_tongue`) ---are in separate columns. In addition, there is a single row (or observation) for each language. The data are, therefore, in what we call a *tidy data* format. Tidy data is a fundamental concept and will be a significant focus in the remainder of this book: many of the functions from `tidyverse` require tidy data, including the `ggplot` function that we will use shortly for our visualization. We will formally introduce this concept in chapter 3.
 
 
 We will make a bar plot to visualize our data. A bar plot is a chart where the heights of the bars represent certain values, like counts or proportions. We will make a bar plot using the `most_at_home` and `language` columns from our `ten_lang` data frame.
@@ -389,7 +390,7 @@ From figure \@ref(fig:barplot-mother-tongue-reorder), we have answered our quest
 
 > "n.o.s." means "not otherwise specified", so Cree n.o.s. refers to individuals who reported Cree as their mother tongue. In this data set, the Cree languages include the following categories: Cree n.o.s., Swampy Cree, Plains Cree, Woods Cree, and a 'Cree not included elsewhere' category (which includes Moose Cree, Northern East Cree and Southern East Cree)  [@language2018]. 
 
-Learning how to describe data visualizations is a very useful skill. We will provide descriptions for you in this course (as we did above) until we get to Chapter 4, which focuses on data visualization. Then, we will explicitly teach you how to do this yourself and not over-state or over-interpret the results from a visualization.
+Learning how to describe data visualizations is a very useful skill. We will provide descriptions for you in this book (as we did above) until we get to Chapter 4, which focuses on data visualization. Then, we will explicitly teach you how to do this yourself and not over-state or over-interpret the results from a visualization.
 
 ### Putting it all together
 
