--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -9,7 +9,7 @@ This will be presented in the context of a real-world data science application,
 providing more practice working through a whole case study.
 
 ## Chapter learning objectives
-By the end of the chapter, students will be able to:
+By the end of the chapter, readers will be able to:
 
 - define the term "tidy data"
 - discuss the advantages and disadvantages of storing data in a tidy data format
