making paragraph on questions more directed to students

--- a/index.Rmd
+++ b/index.Rmd
@@ -76,7 +76,7 @@ The four common data science methods that are useful for answering predictive, e
 
 4. **Estimation: make a good guess of an average or a proportion for the wider population from a representative sample (group of people or units), and quantify how good that guess is.** This could answer a question such as what is the proportion of undergraduate students that own an iPhone?
 
-We map each of these methods to the broader type of data analysis question they are useful for answering, as well as discuss what kinds of data are needed to answer such questions [@leek2015question; @peng2015art]. More advanced (*e.g.,* causal or mechanistic) data analysis questions are beyond the scope of this text.
+We map each of these methods to the broader data analysis question, listed in Table \@ref(tab:questions-table), they help answer and discuss what kinds of data are needed to answer such questions [@leek2015question; @peng2015art]. More advanced data analysis questions in Table \@ref(tab:questions-table) (*e.g.,* causal or mechanistic) are beyond the scope of this book.
 
 
 Table: (\#tab:questions-table) Types of data analysis questions
