removing unexplained concept, rephrasing paragraph for intended audience

--- a/index.Rmd
+++ b/index.Rmd
@@ -196,8 +196,7 @@ read_csv("data/can_lang.csv")
 
 
 > **In case you want to know more (optional):** 
-> We use the `read_csv` function from the `tidyverse` instead of the base R function `read.csv` because it's faster, and it creates a nicer variant of the base R data frame called a *tibble*. 
-> This has several benefits that we'll discuss in further detail later in the book.
+> There is another function, which also loads csv files called `read.csv`, which is a base R function (meaning we don't need to load a package to use it). Why are we using `read_csv` instead of `read.csv`? We use the `read_csv` function from the `tidyverse` because it's faster, and it has other advantages, such as a more readable format when printing the data frame.  
 
 ## Naming things in R
 
